minikube/kafka/bkafa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-producer
  labels:
    app.kubernetes.io/name: kafka-producer
    app.kubernetes.io/app: notification-kafka-svc
    app.kubernetes.io/instance: notification-kafka-svc
    app.kubernetes.io/version: "18.0.0"
    app.kubernetes.io/managed-by: vizual
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  ingressClassName: dev-nginx
  rules:
    - host: "producer.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-headless
                port:
                  number: 9092
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-consumer
  labels:
    app.kubernetes.io/name: kafka-consumer
    app.kubernetes.io/app: notification-kafka-consumer-svc
    app.kubernetes.io/instance: notification-kafka-consumer-svc
    app.kubernetes.io/version: "18.0.0"
    app.kubernetes.io/managed-by: vizual
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  ingressClassName: dev-nginx
  rules:
    - host: "consumer.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka
                port:
                  number: 9092
